--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2.63"
 js-sys = "0.3"
+num = "0.2"
+num-derive = "0.3"
+num-traits = "0.2"
 
 
 
