--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ wasm-bindgen-test = "0.3.13"
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
 
+[profile.bench]
+debug = true
+
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-Oz", "--enable-mutable-globals"]
 
