--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,11 @@ wasm-bindgen-test = "0.3.13"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = 3
 
 [profile.bench]
 debug = true
+opt-level = 3
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-Oz", "--enable-mutable-globals"]
