--- a/www/package.json
+++ b/www/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "wasm-game-of-life": "file:../pkg"
   },
   "devDependencies": {
